# spectral_com

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
brief/: contribution-map.yaml  evidence-matrix.csv  topic-brief.md
configs/: confirmatory_hessian_pythia70_frontier_v2_20260715.json  datasets.yaml  default.yaml  large_model_global_controls_v3_20260716.json  large_model_interaction_aware_v4_20260717.json  large_model_method_ablation_20260716.json  large_model_method_ablation_v2_20260716.json  large_scale_hessian_pilot_20260714.json  large_scale_hessian_suite_20260714.json  model_paths_435.yaml  models.yaml  sites.yaml  structured_qwen25_1p5b.yaml  structured_qwen25_7b.yaml
docs/: current_methods_and_results_zh.md  hessian_repair_exact_rate_report_20260713.md  interaction_aware_two_stage_update_20260717.md  method_rationality_comparison_and_expansion_20260716.md  methods_and_results.md  multimodal_spectral_stacked_compression_strategy_20260716.md  oasr_structured_residual_report_20260702.md  official_baseline_execution_contract_20260717.md  remote_merge_and_research_audit_20260716.md  serialized_rate_liftquant_confirmatory_update_20260714.md  vision_ptq_attention_locality_plan_20260717.md  vision_residual_rank_locality.md
environments/: validation_210_20260716.yaml
external_patches/: liftquant_72b3875_qwen2_attention_type.patch
figures/: plot_cuda_benchmark.py  plot_structured_qwen25.py
issues/: issues.csv
notebooks/: 01_spectrum_overview.ipynb  02_attention_vs_ffn.ipynb  03_kv_cache_dynamics.ipynb  04_dmd_analysis.ipynb
(+728 files in other folders)
