[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-spectral-dynamics"
version = "0.1.0"
description = "Streaming spectral and token-time dynamics analysis for LLM activations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "matplotlib>=3.7,<4",
  "pyyaml>=6.0,<7",
  "torch>=2.2,<3",
  "transformers>=4.46,<6",
  "accelerate>=0.34,<2",
  "safetensors>=0.4,<1",
  "sentencepiece>=0.2,<1",
  "protobuf>=4.25,<8",
  "tqdm>=4.66,<5"
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]
research = ["datasets>=2.18,<5", "transformer-lens>=2.0,<3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
